# YunTu

./: .gitignore  App.vue  AppMenu.vue  AppTopbar.vue  Dashboard.vue  Help.vue  README.md  Statistics.vue  UPDATE_LOG.md  index.html  main.js  package.json  release.mjs  todo.md  vite.config.mjs
api/: server.js
components/: batchDialog.vue
envapi/: config.json  example.py  init.sh  log.py  main.py  ocr.py  parser.py  piccolo_conf.py  test.py  yuntu.db
envapi/file/: alipay_record_20241028_132101.csv  微信支付账单(20240128-20240428).csv
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/api/: server.js
src/layout/: AppFooter.vue
src/router/: index.js
src/store/: index.js
src/store/modules/: categoryStore.js
src/utils/: request.js
src/views/: Settings.vue
src/views/pages/: Landing.vue
src/views/uikit/: ChartDoc.vue
store/modules/: recordsStore.js
utils/: db.js
views/: Details.vue  Suggestions.vue  UpdateDialog.vue  YesterdayReview.vue
views/pages/: Documentation.vue
